--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ APP_PORT=3010
 DB_CONNECTION_STRING=mysql://user:password@localhost:3306/db_name
 INITIAL_ADMIN_PASSWORD=admin123
 BCRYPT_SALT=8
+JWT_SECRET_KEY=somesecret
