--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "mock service binar platinum",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js",
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
     "db:create": "sequelize db:create",
     "db:drop": "sequelize db:drop",
     "db:migration": "sequelize migration:generate --name",
@@ -33,10 +33,12 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.21.3"
+    "sequelize": "^6.21.3",
+    "zod": "^3.17.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.19",
